05-ingress/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kub-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      hostname: "*.kub"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
