05-ingress/http-redirect-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kub-http-redirect
  namespace: istio-system
spec:
  parentRefs:
    - name: kub-gateway
      namespace: istio-system
      sectionName: http
  hostnames:
    - "*.kub"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
